Change target name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ include_directories("../libsie/src/include")
 link_libraries(crt crt_helper c gcc ft sie)
 file(GLOB_RECURSE SOURCES "src/*.c")
 
-add_executable(sie_mpctl ${SOURCES})
-target_sdk_setup(sie_mpctl NEWSGOLD)
-target_link_directories(sie_mpctl PUBLIC "../libsie/build/lib/NSG")
-target_compile_options(sie_mpctl BEFORE PUBLIC -std=gnu99 -Wall -Werror)
+add_executable(SieMPCtl_NSG ${SOURCES})
+target_sdk_setup(SieMPCtl_NSG NEWSGOLD)
+target_link_directories(SieMPCtl_NSG PUBLIC "../libsie/build/lib/NSG")
+target_compile_options(SieMPCtl_NSG BEFORE PUBLIC -std=gnu99 -Wall -Werror)
